--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -1,13 +1,39 @@
 language = en
 label.registration = Registration
 label.login = Log In
+label.teacher = Teacher
 label.course = Course
 label.hello = Hello
+label.403 = You do not have permission to access this page!
+label.send = Send
+
+
+label.create.task.description = Description
+label.create.task.examples = Example
+label.create.task.template = Method template
+label.create.task.datapoint = Set test data point
 
 label.user.name = User name
 label.user.email = Email
 label.user.password = Password
-label.teacher = Teacher
+label.check.task = Check task
 
 label.task.menu = Task menu
 label.task.menu.find = Find task
+label.task.menu.size = Size
+label.task.menu.delete = Delete
+label.task.menu.add = Add task
+label.task.menu.tasks = Tasks
+label.task.menu.delete.id = Task id
+
+label.course.menu = Course menu
+label.course.menu.create = Create course
+label.course.menu.show = Show courses
+label.course.menu.delete = Delete course
+
+label.create.task.name = Task name
+label.create.task.group = Task group
+
+label.title.create.new.task = Create new task
+label.title.403
+
