--- a/src/main/resources/label_ru.properties
+++ b/src/main/resources/label_ru.properties
@@ -4,10 +4,35 @@ label.login = Войти на сайт
 label.teacher = Учитель
 label.course = Курсы
 label.hello = Приветствую
+label.403 = Вы не имеете доступа к этой странице!
+label.send = Отправить
+
+
+label.create.task.description = Описание
+label.create.task.examples = Примеры
+label.create.task.template = Method template
+label.create.task.datapoint = Set test data point
 
 label.user.name = Имя
 label.user.email = Почтовый ящик
 label.user.password = Пароль
+label.check.task = Проверка задачи
 
 label.task.menu = Задачи
 label.task.menu.find = Найти задачу
+label.task.menu.size = Количество задач
+label.task.menu.delete = Удалить задачу
+label.task.menu.add = Добавить задачу
+label.task.menu.tasks = Задачи
+
+label.course.menu = Меню курсов
+label.course.menu.create = Cоздать курс
+label.course.menu.show = Показать курсы
+label.course.menu.delete = Удалить курс
+
+label.create.task.name = Имя задачи
+label.create.task.group = Группа задачи
+
+label.title.create.new.task = Создать задачу
+
+label.header.create.new.task
