--- a/src/main/resources/label_ua.properties
+++ b/src/main/resources/label_ua.properties
@@ -1,14 +1,36 @@
 language = ua
-label.registration = Зарееструватися
+label.registration = Зареєструватися
 label.login = Вхiд
 label.teacher = Вчитель
 label.course = Курси
 label.hello = Вiтаю
+label.403 = Ви не маєте доступу до цієї сторінки!
+label.send = Вiдправити
+
+
+label.create.task.description = Опис
+label.create.task.examples = Приклад
+label.create.task.template = Method template
+label.create.task.datapoint = Set test data point
 
 label.user.name = Iм'я
 label.user.email = Пошта
 label.user.password = Пароль
+label.check.task = Перевiрка задачi
 
 label.task.menu = Задачi
 label.task.menu.find = Знайти задачу
+label.task.menu.size = Кiлькicть задач
+label.task.menu.delete = Видалити задачу
+label.task.menu.add = Добавити задачу
+label.task.menu.tasks = Задачi
 
+label.course.menu = Меню курсiв
+label.course.menu.create = Створити курс
+label.course.menu.show = Показати курси
+label.course.menu.delete = Видалити курс
+
+label.create.task.name = Iм'я задачi
+label.create.task.group = Група задачi
+
+label.title.create.new.task = Створити задачу
