--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -1,4 +1,5 @@
 language = en
+
 label.registration = Registration
 label.login = Log In
 label.teacher = Teacher
@@ -6,12 +7,17 @@ label.course = Course
 label.hello = Hello
 label.403 = You do not have permission to access this page!
 label.send = Send
+label.check = Check
+label.get.task = Get task
+label.size.message = Amount of tasks
 
 
 label.create.task.description = Description
 label.create.task.examples = Example
 label.create.task.template = Method template
 label.create.task.datapoint = Set test data point
+label.create.task.name = Task name
+label.create.task.group = Task group
 
 label.user.name = User name
 label.user.email = Email
@@ -31,9 +37,18 @@ label.course.menu.create = Create course
 label.course.menu.show = Show courses
 label.course.menu.delete = Delete course
 
-label.create.task.name = Task name
-label.create.task.group = Task group
 
 label.title.create.new.task = Create new task
-label.title.403
+label.title.403 = HTTP Status 403 - Access is denied
+label.title.create.task = Create task page
+label.title.delete.form = Delete
+label.title.do.task = Do task
+label.title.find.task = Find task
+label.title.group.list = Group list
+label.title.login = Login
+label.title.menu = Menu
+label.title.registration.form = Registration
+label.title.size = Size
+label.title.task.list = Task list
+label.title.tasks.menu = Title
 
