--- a/src/main/resources/label_ru.properties
+++ b/src/main/resources/label_ru.properties
@@ -6,12 +6,14 @@ label.course = Курсы
 label.hello = Приветствую
 label.403 = Вы не имеете доступа к этой странице!
 label.send = Отправить
-
+label.get.task = Получить задачу
+label.size.message = Количество задач
+label.check = Проверить
 
 label.create.task.description = Описание
 label.create.task.examples = Примеры
-label.create.task.template = Method template
-label.create.task.datapoint = Set test data point
+label.create.task.template = Шаблон метода
+label.create.task.datapoint = Тестовые данные
 
 label.user.name = Имя
 label.user.email = Почтовый ящик
@@ -24,6 +26,7 @@ label.task.menu.size = Количество задач
 label.task.menu.delete = Удалить задачу
 label.task.menu.add = Добавить задачу
 label.task.menu.tasks = Задачи
+label.task.menu.delete.id = Id задачи
 
 label.course.menu = Меню курсов
 label.course.menu.create = Cоздать курс
@@ -34,5 +37,15 @@ label.create.task.name = Имя задачи
 label.create.task.group = Группа задачи
 
 label.title.create.new.task = Создать задачу
-
-label.header.create.new.task
+label.title.403 = HTTP Status 403 - Доступ ограничен
+label.title.create.task = Create task page
+label.title.delete.form = Title
+label.title.do.task = Решение задачи
+label.title.find.task = Поиск задачи
+label.title.group.list = Список груп
+label.title.login = Логин
+label.title.menu = Meню
+label.title.registration.form = Регистрация
+label.title.size = Размер
+label.title.task.list = Список задач
+label.title.tasks.menu = Title
