--- a/src/main/resources/label_ua.properties
+++ b/src/main/resources/label_ua.properties
@@ -6,12 +6,15 @@ label.course = Курси
 label.hello = Вiтаю
 label.403 = Ви не маєте доступу до цієї сторінки!
 label.send = Вiдправити
+label.get.task = Отримати задачу
+label.size.message = Кiлькicть задач
+label.check = Перевірити
 
 
 label.create.task.description = Опис
 label.create.task.examples = Приклад
-label.create.task.template = Method template
-label.create.task.datapoint = Set test data point
+label.create.task.template = Шаблон методу
+label.create.task.datapoint = Тестові данні
 
 label.user.name = Iм'я
 label.user.email = Пошта
@@ -22,8 +25,9 @@ label.task.menu = Задачi
 label.task.menu.find = Знайти задачу
 label.task.menu.size = Кiлькicть задач
 label.task.menu.delete = Видалити задачу
-label.task.menu.add = Добавити задачу
+label.task.menu.add = Додати задачу
 label.task.menu.tasks = Задачi
+label.task.menu.delete.id = Id задачі
 
 label.course.menu = Меню курсiв
 label.course.menu.create = Створити курс
@@ -34,3 +38,15 @@ label.create.task.name = Iм'я задачi
 label.create.task.group = Група задачi
 
 label.title.create.new.task = Створити задачу
+label.title.403 = HTTP Status 403 - Доступ заборонено!
+label.title.create.task = Створення задачi
+label.title.delete.form = Title
+label.title.do.task = Виконання задачi
+label.title.find.task = Знайти задачу
+label.title.group.list = Список груп
+label.title.login = Логін
+label.title.menu = Mеню
+label.title.registration.form = Реєстрацiя
+label.title.size = Кiлькicть задач
+label.title.task.list = Спісок задач
+label.title.tasks.menu = Title
