add lesson menu,course menu

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -3,13 +3,14 @@ language = en
 label.registration = Registration
 label.login = Log In
 label.teacher = Teacher
-label.course = Course
+label.course = Course menu
 label.hello = Hello
 label.403 = You do not have permission to access this page!
 label.send = Send
 label.check = Check
 label.get.task = Get task
 label.size.message = Amount of tasks
+label.lesson = Lesson menu
 
 
 label.create.task.description = Description
@@ -51,4 +52,32 @@ label.title.registration.form = Registration
 label.title.size = Size
 label.title.task.list = Task list
 label.title.tasks.menu = Title
+label.title.create.course = Create course
+label.title.create.new.course = Create new course
+label.title.course.menu = Course menu
+label.title.add.lesson = Add lesson
+label.title.lesson = Lesson
+label.title.show.lessons = Show lessons
+label.title.delete.lesson = Delete lesson
+label.title.show.lesson = Show lesson
+label.title.show.course = Show course
+label.title.create.new.lesson = Create lesson
+
+label.register.name.error = name error
+label.register.email.error = email error
+label.register.password.error = password error
+
+label.create.course.description = Description
+label.create.course.title = Title
+label.create.course.add.lesson = Add lesson
+label.course.add.tasks = Add tasks
+label.create.course.lesson.description = Lesson description
+label.create.course.lesson.title = Lesson title
+label.create.course.add.course = Add course
+
+label.lesson.menu.create = Create lesson
+label.lesson.menu.show =  Show lessons
+label.lesson.menu.delete = Delete lesson
+label.lesson.menu.delete.title = Lesson title
+
 
