--- a/src/main/resources/label_ru.properties
+++ b/src/main/resources/label_ru.properties
@@ -49,3 +49,8 @@ label.title.registration.form = Регистрация
 label.title.size = Размер
 label.title.task.list = Список задач
 label.title.tasks.menu = Title
+label.title.create.course = Create course
+
+label.register.name.error =
+label.register.email.error =
+label.register.password.error =
