--- a/src/main/resources/label_ua.properties
+++ b/src/main/resources/label_ua.properties
@@ -48,5 +48,5 @@ label.title.login = Логін
 label.title.menu = Mеню
 label.title.registration.form = Реєстрацiя
 label.title.size = Кiлькicть задач
-label.title.task.list = Спісок задач
+label.title.task.list = Список задач
 label.title.tasks.menu = Title
