add groupDao impl

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -4,6 +4,7 @@ label.registration = Registration
 label.login = Log In
 label.teacher = Teacher
 label.course = Course menu
+label.group = Group menu
 label.hello = Hello
 label.403 = You do not have permission to access this page!
 label.send = Send
@@ -11,6 +12,7 @@ label.check = Check
 label.get.task = Get task
 label.size.message = Amount of tasks
 label.lesson = Lesson menu
+label.user = User menu
 
 
 label.create.task.description = Description
@@ -62,6 +64,7 @@ label.title.delete.lesson = Delete lesson
 label.title.show.lesson = Show lesson
 label.title.show.course = Show course
 label.title.create.new.lesson = Create lesson
+label.title.group = Group menu
 
 label.register.name.error = name error
 label.register.email.error = email error
@@ -79,5 +82,9 @@ label.lesson.menu.create = Create lesson
 label.lesson.menu.show =  Show lessons
 label.lesson.menu.delete = Delete lesson
 label.lesson.menu.delete.title = Lesson title
+
+label.group.menu.create = Create group
+label.group.menu.show = Show groups
+label.group.menu.delete = Delete group
 
 
