--- a/src/main/resources/label_ua.properties
+++ b/src/main/resources/label_ua.properties
@@ -52,6 +52,19 @@ label.title.task.list = Спісок задач
 label.title.tasks.menu = Title
 label.title.create.course = Create course
 
-label.register.name.error =
-label.register.email.error =
-label.register.password.error =
+label.register.name.error = Помилка iм'я
+label.register.email.error = Помилка пошти
+label.register.password.error = Помилкаа паролю
+
+label.create.course.description = Опис
+label.create.course.title = Title
+label.create.course.add.lesson = Додати урок
+label.course.add.tasks = Додати задачi
+label.create.course.lesson.description = Опис уроку
+label.create.course.lesson.title = Lesson title
+label.create.course.add.course = Додати курс
+
+label.lesson.menu.create = Cтворити урок
+label.lesson.menu.show =  Показати уроки
+label.lesson.menu.delete = Видалити урок
+label.lesson.menu.delete.title = Lesson title
