--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -14,6 +14,8 @@ label.size.message = Amount of tasks
 label.lesson = Lesson menu
 label.user = User menu
 
+label.registration.successful = Registration successful
+
 
 label.create.task.description = Description
 label.create.task.examples = Example
@@ -65,6 +67,8 @@ label.title.show.lesson = Show lesson
 label.title.show.course = Show course
 label.title.create.new.lesson = Create lesson
 label.title.group = Group menu
+label.title.create.group = Create group
+
 
 label.register.name.error = name error
 label.register.email.error = email error
@@ -72,11 +76,12 @@ label.register.password.error = password error
 
 label.create.course.description = Description
 label.create.course.title = Title
-label.create.course.add.lesson = Add lesson
+label.create.course.add.lesson = Add lessons
 label.course.add.tasks = Add tasks
 label.create.course.lesson.description = Lesson description
 label.create.course.lesson.title = Lesson title
-label.create.course.add.course = Add course
+label.create.course.add.course = Create course
+label.course.menu.add.lesson = Add lesson to course
 
 label.lesson.menu.create = Create lesson
 label.lesson.menu.show =  Show lessons
@@ -86,5 +91,15 @@ label.lesson.menu.delete.title = Lesson title
 label.group.menu.create = Create group
 label.group.menu.show = Show groups
 label.group.menu.delete = Delete group
+label.group.menu.add.users = Add users
+
+label.group.add.group = Add group
+label.create.group.title = Group title
+label.create.group.description = Group description
+label.create.group.add.group = Add group
+
+label.user.menu.delete = Delete user
+label.user.menu.show.user = Show user
+label.user.menu.create = Create admin
 
 
