--- a/src/main/resources/label_ua.properties
+++ b/src/main/resources/label_ua.properties
@@ -1,14 +1,18 @@
 language = ua
+
 label.registration = Зареєструватися
 label.login = Вхiд
 label.teacher = Вчитель
 label.course = Курси
+label.group = Меню групп
 label.hello = Вiтаю
 label.403 = Ви не маєте доступу до цієї сторінки!
 label.send = Вiдправити
+label.check = Перевiрити
 label.get.task = Отримати задачу
 label.size.message = Кiлькicть задач
-label.check = Перевірити
+label.lesson = Меню урокiв
+label.user = Меню користувача
 
 
 label.create.task.description = Опис
