--- a/src/main/resources/label_ru.properties
+++ b/src/main/resources/label_ru.properties
@@ -1,14 +1,20 @@
 language = ru
+
 label.registration = Регистрация
 label.login = Войти на сайт
 label.teacher = Учитель
 label.course = Курсы
+label.group = Меню групп
 label.hello = Приветствую
 label.403 = Вы не имеете доступа к этой странице!
 label.send = Отправить
-label.get.task = Получить задачу
-label.size.message = Количество задач
 label.check = Проверить
+label.get.task = Получить задачу
+label.lesson = Меню задач
+label.size.message = Количество задач
+label.user = Меню юзера
+
+
 
 label.create.task.description = Описание
 label.create.task.examples = Примеры
