add user menu,course menu

--- a/src/main/resources/label_ru.properties
+++ b/src/main/resources/label_ru.properties
@@ -12,7 +12,7 @@ label.check = Проверить
 label.get.task = Получить задачу
 label.lesson = Меню задач
 label.size.message = Количество задач
-label.user = Меню юзера
+label.user = Меню пользователя
 
 
 
