--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -8,6 +8,7 @@ label.group = Group menu
 label.hello = Hello
 label.403 = You do not have permission to access this page!
 label.send = Send
+label.delete = Delete
 label.check = Check
 label.get.task = Get task
 label.size.message = Amount of tasks
@@ -35,7 +36,7 @@ label.task.menu.size = Size
 label.task.menu.delete = Delete
 label.task.menu.add = Add task
 label.task.menu.tasks = Tasks
-label.task.menu.delete.id = Task id
+label.task.menu.delete.id = Task name
 
 label.course.menu = Course menu
 label.course.menu.create = Create course
@@ -45,8 +46,8 @@ label.course.menu.delete = Delete course
 
 label.title.create.new.task = Create new task
 label.title.403 = HTTP Status 403 - Access is denied
-label.title.create.task = Create task page
-label.title.delete.form = Delete
+label.title.create.task = Create task
+label.title.delete.task = Delete task
 label.title.do.task = Do task
 label.title.find.task = Find task
 label.title.group.list = Group list
@@ -55,12 +56,12 @@ label.title.menu = Menu
 label.title.registration.form = Registration
 label.title.size = Size
 label.title.task.list = Task list
-label.title.tasks.menu = Title
+label.title.task.menu = Task menu
 label.title.create.course = Create course
 label.title.create.new.course = Create new course
 label.title.course.menu = Course menu
 label.title.add.lesson = Add lesson
-label.title.lesson = Lesson
+label.title.lesson = Lesson menu
 label.title.show.lessons = Show lessons
 label.title.delete.lesson = Delete lesson
 label.title.show.lesson = Show lesson
@@ -68,6 +69,11 @@ label.title.show.course = Show course
 label.title.create.new.lesson = Create lesson
 label.title.group = Group menu
 label.title.create.group = Create group
+label.title.show.groups = Show groups
+label.title.delete.group = Delete group
+label.title.user.menu = User menu
+label.title.delete.user = Delete user
+label.title.add.admin = Add admin
 
 
 label.register.name.error = name error
@@ -76,7 +82,7 @@ label.register.password.error = password error
 
 label.create.course.description = Description
 label.create.course.title = Title
-label.create.course.add.lesson = Add lessons
+label.create.course.add.lesson = Add lesson
 label.course.add.tasks = Add tasks
 label.create.course.lesson.description = Lesson description
 label.create.course.lesson.title = Lesson title
@@ -87,19 +93,27 @@ label.lesson.menu.create = Create lesson
 label.lesson.menu.show =  Show lessons
 label.lesson.menu.delete = Delete lesson
 label.lesson.menu.delete.title = Lesson title
+label.lesson.menu.add.task = Add task to lesson
 
 label.group.menu.create = Create group
 label.group.menu.show = Show groups
 label.group.menu.delete = Delete group
 label.group.menu.add.users = Add users
+label.group.menu.add.user = Add user to group
+label.group.menu.delete.name = Group name
 
 label.group.add.group = Add group
 label.create.group.title = Group title
 label.create.group.description = Group description
 label.create.group.add.group = Add group
+label.create.course.add.user = Add users
 
 label.user.menu.delete = Delete user
-label.user.menu.show.user = Show user
-label.user.menu.create = Create admin
+label.user.menu.show.users = Show users
+label.user.menu.create = Add admin
+
+label.user.menu.delete.email = User email
+
+
 
 
