course, lesson, group validator done

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -116,6 +116,6 @@ label.user.menu.delete.email = User email
 
 
 
-label.validation.error.userName = Invalid user name
+UserName.User.name = Invalid user name
 
 
