--- a/src/main/resources/label_ru.properties
+++ b/src/main/resources/label_ru.properties
@@ -1,79 +1,79 @@
 language = ru
 
-label.registration = Регистрация
-label.login = Войти на сайт
-label.teacher = Учитель
-label.course = Курсы
-label.group = Меню групп
-label.hello = Приветствую
-label.403 = Вы не имеете доступа к этой странице!
-label.send = Отправить
-label.check = Проверить
-label.get.task = Получить задачу
-label.lesson = Меню задач
-label.size.message = Количество задач
-label.user = Меню пользователя
+label.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+label.login = \u0412\u043E\u0439\u0442\u0438 \u043D\u0430 \u0441\u0430\u0439\u0442
+label.teacher = \u0423\u0447\u0438\u0442\u0435\u043B\u044C
+label.course = \u041A\u0443\u0440\u0441\u044B
+label.group = \u041C\u0435\u043D\u044E \u0433\u0440\u0443\u043F\u043F
+label.hello = \u041F\u0440\u0438\u0432\u0435\u0442\u0441\u0442\u0432\u0443\u044E
+label.403 = \u0412\u044B \u043D\u0435 \u0438\u043C\u0435\u0435\u0442\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u044D\u0442\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435!
+label.send = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
+label.check = \u041F\u0440\u043E\u0432\u0435\u0440\u0438\u0442\u044C
+label.get.task = \u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0437\u0430\u0434\u0430\u0447\u0443
+label.lesson = \u041C\u0435\u043D\u044E \u0437\u0430\u0434\u0430\u0447
+label.size.message = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u0437\u0430\u0434\u0430\u0447
+label.user = \u041C\u0435\u043D\u044E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 
-label.registration.successful = Успешная регистрация!
+label.registration.successful = \u0423\u0441\u043F\u0435\u0448\u043D\u0430\u044F \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F!
 
 
 
-label.create.task.description = Описание
-label.create.task.examples = Примеры
-label.create.task.template = Шаблон метода
-label.create.task.datapoint = Тестовые данные
+label.create.task.description = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+label.create.task.examples = \u041F\u0440\u0438\u043C\u0435\u0440\u044B
+label.create.task.template = \u0428\u0430\u0431\u043B\u043E\u043D \u043C\u0435\u0442\u043E\u0434\u0430
+label.create.task.datapoint = \u0422\u0435\u0441\u0442\u043E\u0432\u044B\u0435 \u0434\u0430\u043D\u043D\u044B\u0435
 
-label.user.name = Имя
-label.user.email = Почтовый ящик
-label.user.password = Пароль
-label.check.task = Проверка задачи
+label.user.name = \u0418\u043C\u044F
+label.user.email = \u041F\u043E\u0447\u0442\u043E\u0432\u044B\u0439 \u044F\u0449\u0438\u043A
+label.user.password = \u041F\u0430\u0440\u043E\u043B\u044C
+label.check.task = \u041F\u0440\u043E\u0432\u0435\u0440\u043A\u0430 \u0437\u0430\u0434\u0430\u0447\u0438
 
-label.task.menu = Задачи
-label.task.menu.find = Найти задачу
-label.task.menu.size = Количество задач
-label.task.menu.delete = Удалить задачу
-label.task.menu.add = Добавить задачу
-label.task.menu.tasks = Задачи
-label.task.menu.delete.id = Id задачи
+label.task.menu = \u0417\u0430\u0434\u0430\u0447\u0438
+label.task.menu.find = \u041D\u0430\u0439\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
+label.task.menu.size = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u0437\u0430\u0434\u0430\u0447
+label.task.menu.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0437\u0430\u0434\u0430\u0447\u0443
+label.task.menu.add = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0437\u0430\u0434\u0430\u0447\u0443
+label.task.menu.tasks = \u0417\u0430\u0434\u0430\u0447\u0438
+label.task.menu.delete.id = Id \u0437\u0430\u0434\u0430\u0447\u0438
 
-label.course.menu = Меню курсов
-label.course.menu.create = Cоздать курс
-label.course.menu.show = Показать курсы
-label.course.menu.delete = Удалить курс
+label.course.menu = \u041C\u0435\u043D\u044E \u043A\u0443\u0440\u0441\u043E\u0432
+label.course.menu.create = C\u043E\u0437\u0434\u0430\u0442\u044C \u043A\u0443\u0440\u0441
+label.course.menu.show = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043A\u0443\u0440\u0441\u044B
+label.course.menu.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u0443\u0440\u0441
 
-label.create.task.name = Имя задачи
-label.create.task.group = Группа задачи
+label.create.task.name = \u0418\u043C\u044F \u0437\u0430\u0434\u0430\u0447\u0438
+label.create.task.group = \u0413\u0440\u0443\u043F\u043F\u0430 \u0437\u0430\u0434\u0430\u0447\u0438
 
-label.title.create.new.task = Создать задачу
-label.title.403 = HTTP Status 403 - Доступ ограничен
+label.title.create.new.task = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0437\u0430\u0434\u0430\u0447\u0443
+label.title.403 = HTTP Status 403 - \u0414\u043E\u0441\u0442\u0443\u043F \u043E\u0433\u0440\u0430\u043D\u0438\u0447\u0435\u043D
 label.title.create.task = Create task page
 label.title.delete.form = Title
-label.title.do.task = Решение задачи
-label.title.find.task = Поиск задачи
-label.title.group.list = Список груп
-label.title.login = Логин
-label.title.menu = Meню
-label.title.registration.form = Регистрация
-label.title.size = Размер
-label.title.task.list = Список задач
+label.title.do.task = \u0420\u0435\u0448\u0435\u043D\u0438\u0435 \u0437\u0430\u0434\u0430\u0447\u0438
+label.title.find.task = \u041F\u043E\u0438\u0441\u043A \u0437\u0430\u0434\u0430\u0447\u0438
+label.title.group.list = \u0421\u043F\u0438\u0441\u043E\u043A \u0433\u0440\u0443\u043F
+label.title.login = \u041B\u043E\u0433\u0438\u043D
+label.title.menu = Me\u043D\u044E
+label.title.registration.form = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+label.title.size = \u0420\u0430\u0437\u043C\u0435\u0440
+label.title.task.list = \u0421\u043F\u0438\u0441\u043E\u043A \u0437\u0430\u0434\u0430\u0447
 label.title.tasks.menu = Title
 label.title.create.course = Create course
 
-label.register.name.error = Ошибка имени
-label.register.email.error = Ошибка почты
-label.register.password.error = Ошибка пароля
+label.register.name.error = \u041E\u0448\u0438\u0431\u043A\u0430 \u0438\u043C\u0435\u043D\u0438
+label.register.email.error = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u043E\u0447\u0442\u044B
+label.register.password.error = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0430\u0440\u043E\u043B\u044F
 
-label.create.course.description = Описание
+label.create.course.description = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 label.create.course.title = Title
-label.create.course.add.lesson = Добавить урок
-label.course.add.tasks = Добавить задачи
-label.create.course.lesson.description = Описание урока
+label.create.course.add.lesson = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0443\u0440\u043E\u043A
+label.course.add.tasks = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0437\u0430\u0434\u0430\u0447\u0438
+label.create.course.lesson.description = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0443\u0440\u043E\u043A\u0430
 label.create.course.lesson.title = Lesson title
 label.create.course.add.course = Add course
 
-label.lesson.menu.create = Создать урок
-label.lesson.menu.show =  Показать урок
-label.lesson.menu.delete = Удалить урок
-label.lesson.menu.delete.title = Урок
+label.lesson.menu.create = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0443\u0440\u043E\u043A
+label.lesson.menu.show =  \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0443\u0440\u043E\u043A
+label.lesson.menu.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0443\u0440\u043E\u043A
+label.lesson.menu.delete.title = \u0423\u0440\u043E\u043A
 
-label.validation.error.userName = Неправильное имя пользователя
+UserName.User.name = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u043E\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
