--- a/src/main/resources/label_ua.properties
+++ b/src/main/resources/label_ua.properties
@@ -1,78 +1,78 @@
 language = ua
 
-label.registration = Зареєструватися
-label.login = Вхiд
-label.teacher = Вчитель
-label.course = Курси
-label.group = Меню групп
-label.hello = Вiтаю
-label.403 = Ви не маєте доступу до цієї сторінки!
-label.send = Вiдправити
-label.check = Перевiрити
-label.get.task = Отримати задачу
-label.size.message = Кiлькicть задач
-label.lesson = Меню урокiв
-label.user = Меню користувача
+label.registration = \u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438\u0441\u044F
+label.login = \u0412\u0445i\u0434
+label.teacher = \u0412\u0447\u0438\u0442\u0435\u043B\u044C
+label.course = \u041A\u0443\u0440\u0441\u0438
+label.group = \u041C\u0435\u043D\u044E \u0433\u0440\u0443\u043F\u043F
+label.hello = \u0412i\u0442\u0430\u044E
+label.403 = \u0412\u0438 \u043D\u0435 \u043C\u0430\u0454\u0442\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u0443 \u0434\u043E \u0446\u0456\u0454\u0457 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0438!
+label.send = \u0412i\u0434\u043F\u0440\u0430\u0432\u0438\u0442\u0438
+label.check = \u041F\u0435\u0440\u0435\u0432i\u0440\u0438\u0442\u0438
+label.get.task = \u041E\u0442\u0440\u0438\u043C\u0430\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
+label.size.message = \u041Ai\u043B\u044C\u043Aic\u0442\u044C \u0437\u0430\u0434\u0430\u0447
+label.lesson = \u041C\u0435\u043D\u044E \u0443\u0440\u043E\u043Ai\u0432
+label.user = \u041C\u0435\u043D\u044E \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 
-label.registration.successful = Успішна реєстрація!
+label.registration.successful = \u0423\u0441\u043F\u0456\u0448\u043D\u0430 \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F!
 
 
-label.create.task.description = Опис
-label.create.task.examples = Приклад
-label.create.task.template = Шаблон методу
-label.create.task.datapoint = Тестові данні
+label.create.task.description = \u041E\u043F\u0438\u0441
+label.create.task.examples = \u041F\u0440\u0438\u043A\u043B\u0430\u0434
+label.create.task.template = \u0428\u0430\u0431\u043B\u043E\u043D \u043C\u0435\u0442\u043E\u0434\u0443
+label.create.task.datapoint = \u0422\u0435\u0441\u0442\u043E\u0432\u0456 \u0434\u0430\u043D\u043D\u0456
 
-label.user.name = Iм'я
-label.user.email = Пошта
-label.user.password = Пароль
-label.check.task = Перевiрка задачi
+label.user.name = I\u043C'\u044F
+label.user.email = \u041F\u043E\u0448\u0442\u0430
+label.user.password = \u041F\u0430\u0440\u043E\u043B\u044C
+label.check.task = \u041F\u0435\u0440\u0435\u0432i\u0440\u043A\u0430 \u0437\u0430\u0434\u0430\u0447i
 
-label.task.menu = Задачi
-label.task.menu.find = Знайти задачу
-label.task.menu.size = Кiлькicть задач
-label.task.menu.delete = Видалити задачу
-label.task.menu.add = Додати задачу
-label.task.menu.tasks = Задачi
-label.task.menu.delete.id = Id задачі
+label.task.menu = \u0417\u0430\u0434\u0430\u0447i
+label.task.menu.find = \u0417\u043D\u0430\u0439\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
+label.task.menu.size = \u041Ai\u043B\u044C\u043Aic\u0442\u044C \u0437\u0430\u0434\u0430\u0447
+label.task.menu.delete = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
+label.task.menu.add = \u0414\u043E\u0434\u0430\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
+label.task.menu.tasks = \u0417\u0430\u0434\u0430\u0447i
+label.task.menu.delete.id = Id \u0437\u0430\u0434\u0430\u0447\u0456
 
-label.course.menu = Меню курсiв
-label.course.menu.create = Створити курс
-label.course.menu.show = Показати курси
-label.course.menu.delete = Видалити курс
+label.course.menu = \u041C\u0435\u043D\u044E \u043A\u0443\u0440\u0441i\u0432
+label.course.menu.create = \u0421\u0442\u0432\u043E\u0440\u0438\u0442\u0438 \u043A\u0443\u0440\u0441
+label.course.menu.show = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u043A\u0443\u0440\u0441\u0438
+label.course.menu.delete = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043A\u0443\u0440\u0441
 
-label.create.task.name = Iм'я задачi
-label.create.task.group = Група задачi
+label.create.task.name = I\u043C'\u044F \u0437\u0430\u0434\u0430\u0447i
+label.create.task.group = \u0413\u0440\u0443\u043F\u0430 \u0437\u0430\u0434\u0430\u0447i
 
-label.title.create.new.task = Створити задачу
-label.title.403 = HTTP Status 403 - Доступ заборонено!
-label.title.create.task = Створення задачi
+label.title.create.new.task = \u0421\u0442\u0432\u043E\u0440\u0438\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
+label.title.403 = HTTP Status 403 - \u0414\u043E\u0441\u0442\u0443\u043F \u0437\u0430\u0431\u043E\u0440\u043E\u043D\u0435\u043D\u043E!
+label.title.create.task = \u0421\u0442\u0432\u043E\u0440\u0435\u043D\u043D\u044F \u0437\u0430\u0434\u0430\u0447i
 label.title.delete.form = Title
-label.title.do.task = Виконання задачi
-label.title.find.task = Знайти задачу
-label.title.group.list = Список груп
-label.title.login = Логін
-label.title.menu = Mеню
-label.title.registration.form = Реєстрацiя
-label.title.size = Кiлькicть задач
-label.title.task.list = Список задач
+label.title.do.task = \u0412\u0438\u043A\u043E\u043D\u0430\u043D\u043D\u044F \u0437\u0430\u0434\u0430\u0447i
+label.title.find.task = \u0417\u043D\u0430\u0439\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
+label.title.group.list = \u0421\u043F\u0438\u0441\u043E\u043A \u0433\u0440\u0443\u043F
+label.title.login = \u041B\u043E\u0433\u0456\u043D
+label.title.menu = M\u0435\u043D\u044E
+label.title.registration.form = \u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446i\u044F
+label.title.size = \u041Ai\u043B\u044C\u043Aic\u0442\u044C \u0437\u0430\u0434\u0430\u0447
+label.title.task.list = \u0421\u043F\u0438\u0441\u043E\u043A \u0437\u0430\u0434\u0430\u0447
 label.title.tasks.menu = Title
 label.title.create.course = Create course
 
-label.register.name.error = Помилка iм'я
-label.register.email.error = Помилка пошти
-label.register.password.error = Помилкаа паролю
+label.register.name.error = \u041F\u043E\u043C\u0438\u043B\u043A\u0430 i\u043C'\u044F
+label.register.email.error = \u041F\u043E\u043C\u0438\u043B\u043A\u0430 \u043F\u043E\u0448\u0442\u0438
+label.register.password.error = \u041F\u043E\u043C\u0438\u043B\u043A\u0430\u0430 \u043F\u0430\u0440\u043E\u043B\u044E
 
-label.create.course.description = Опис
+label.create.course.description = \u041E\u043F\u0438\u0441
 label.create.course.title = Title
-label.create.course.add.lesson = Додати урок
-label.course.add.tasks = Додати задачi
-label.create.course.lesson.description = Опис уроку
+label.create.course.add.lesson = \u0414\u043E\u0434\u0430\u0442\u0438 \u0443\u0440\u043E\u043A
+label.course.add.tasks = \u0414\u043E\u0434\u0430\u0442\u0438 \u0437\u0430\u0434\u0430\u0447i
+label.create.course.lesson.description = \u041E\u043F\u0438\u0441 \u0443\u0440\u043E\u043A\u0443
 label.create.course.lesson.title = Lesson title
-label.create.course.add.course = Додати курс
+label.create.course.add.course = \u0414\u043E\u0434\u0430\u0442\u0438 \u043A\u0443\u0440\u0441
 
-label.lesson.menu.create = Cтворити урок
-label.lesson.menu.show =  Показати уроки
-label.lesson.menu.delete = Видалити урок
+label.lesson.menu.create = C\u0442\u0432\u043E\u0440\u0438\u0442\u0438 \u0443\u0440\u043E\u043A
+label.lesson.menu.show =  \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u0443\u0440\u043E\u043A\u0438
+label.lesson.menu.delete = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u0443\u0440\u043E\u043A
 label.lesson.menu.delete.title = Lesson title
 
-label.validation.error.userName = Невірне ім'я користувача
+UserName.User.name = \u041D\u0435\u0432\u0456\u0440\u043D\u0435 \u0456\u043C'\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
