add edit,fin pages

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -1,7 +1,9 @@
 language = en
-
+#TODO delete label
 label.registration = Registration
 label.login = Log In
+label.add = Add
+label.create = Create
 label.teacher = Teacher
 label.course = Course menu
 label.group = Group menu
@@ -13,11 +15,18 @@ label.check = Check
 label.get.task = Get task
 label.size.message = Amount of tasks
 label.lesson = Lesson menu
-label.user = User menu
+label.user = User
+label.edit = Edit
+
+label.error.username = Error name!
+label.task.menu.edit.task = Edit task
+label.lesson.menu.find= Find lesson
+
+
 
 label.registration.successful = Registration successful!
 
-
+#Create task
 label.create.task.description = Description
 label.create.task.examples = Example
 label.create.task.template = Method template
@@ -25,17 +34,18 @@ label.create.task.datapoint = Set test data point
 label.create.task.name = Task name
 label.create.task.group = Task group
 
-label.user.name = User name
+label.user.name = Name
 label.user.email = Email
 label.user.password = Password
 label.check.task = Check task
 
+#Task menu
 label.task.menu = Task menu
 label.task.menu.find = Find task
 label.task.menu.size = Size
-label.task.menu.delete = Delete
-label.task.menu.add = Add task
-label.task.menu.tasks = Tasks
+label.task.menu.delete = Delete task
+label.task.menu.add = Create task
+label.task.menu.show.tasks = Show tasks
 label.task.menu.delete.id = Task name
 
 label.course.menu = Course menu
@@ -74,6 +84,8 @@ label.title.delete.group = Delete group
 label.title.user.menu = User menu
 label.title.delete.user = Delete user
 label.title.add.admin = Add admin
+label.title.edit.lesson = Edit lesson
+label.title.find.lesson = Find lesson`
 
 
 label.register.name.error = name error
@@ -86,20 +98,20 @@ label.create.course.add.lesson = Add lesson
 label.course.add.tasks = Add tasks
 label.create.course.lesson.description = Lesson description
 label.create.course.lesson.title = Lesson title
-label.create.course.add.course = Create course
-label.course.menu.add.lesson = Add lesson to course
+label.create.course.add.course = Add course
+label.course.menu.add.lesson = Edit course
 
 label.lesson.menu.create = Create lesson
 label.lesson.menu.show =  Show lessons
 label.lesson.menu.delete = Delete lesson
 label.lesson.menu.delete.title = Lesson title
-label.lesson.menu.add.task = Add task to lesson
+label.lesson.menu.add.task = Edit lesson
 
 label.group.menu.create = Create group
 label.group.menu.show = Show groups
 label.group.menu.delete = Delete group
 label.group.menu.add.users = Add users
-label.group.menu.add.user = Add user to group
+label.group.menu.add.user = Edit group
 label.group.menu.delete.name = Group name
 
 label.group.add.group = Add group
@@ -111,11 +123,12 @@ label.create.course.add.user = Add users
 label.user.menu.delete = Delete user
 label.user.menu.show.users = Show users
 label.user.menu.create = Add admin
+label.user.menu = User menu
 
 label.user.menu.delete.email = User email
 
 
-
+label.lesson.menu.delete.id = Delete id
 label.validation.error.userName = Invalid user name
 
 
