add lesson,course find

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -17,6 +17,8 @@ label.size.message = Amount of tasks
 label.lesson = Lesson menu
 label.user = User
 label.edit = Edit
+label.admin.name = Admin name
+label.find = Find
 
 label.error.username = Error name!
 label.task.menu.edit.task = Edit task
@@ -34,6 +36,7 @@ label.create.task.datapoint = Set test data point
 label.create.task.name = Task name
 label.create.task.group = Task group
 
+#User menu
 label.user.name = Name
 label.user.email = Email
 label.user.password = Password
@@ -48,12 +51,14 @@ label.task.menu.add = Create task
 label.task.menu.show.tasks = Show tasks
 label.task.menu.delete.id = Task name
 
+#Course menu
 label.course.menu = Course menu
 label.course.menu.create = Create course
 label.course.menu.show = Show courses
 label.course.menu.delete = Delete course
+label.course.menu.find = Find course
 
-
+#Title
 label.title.create.new.task = Create new task
 label.title.403 = HTTP Status 403 - Access is denied
 label.title.create.task = Create task
@@ -101,12 +106,14 @@ label.create.course.lesson.title = Lesson title
 label.create.course.add.course = Add course
 label.course.menu.add.lesson = Edit course
 
+#Lesson menu
 label.lesson.menu.create = Create lesson
 label.lesson.menu.show =  Show lessons
 label.lesson.menu.delete = Delete lesson
-label.lesson.menu.delete.title = Lesson title
+label.lesson.menu.title = Lesson title
 label.lesson.menu.add.task = Edit lesson
 
+#Group menu
 label.group.menu.create = Create group
 label.group.menu.show = Show groups
 label.group.menu.delete = Delete group
