add edit course,group

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -1,5 +1,5 @@
 language = en
-#TODO delete label
+
 label.registration = Registration
 label.login = Log In
 label.add = Add
@@ -19,6 +19,7 @@ label.user = User
 label.edit = Edit
 label.admin.name = Admin name
 label.find = Find
+
 
 label.error.username = Error name!
 label.task.menu.edit.task = Edit task
@@ -91,12 +92,15 @@ label.title.delete.user = Delete user
 label.title.add.admin = Add admin
 label.title.edit.lesson = Edit lesson
 label.title.find.lesson = Find lesson`
+label.title.find.group = Find group
+label.title.edit.course = Edit course
 
 
 label.register.name.error = name error
 label.register.email.error = email error
 label.register.password.error = password error
 
+#Create course
 label.create.course.description = Description
 label.create.course.title = Title
 label.create.course.add.lesson = Add lesson
@@ -120,7 +124,10 @@ label.group.menu.delete = Delete group
 label.group.menu.add.users = Add users
 label.group.menu.add.user = Edit group
 label.group.menu.delete.name = Group name
+label.group.menu.find = Find group
+label.title.edit.group = Edit group
 
+#Create group
 label.group.add.group = Add group
 label.create.group.title = Group title
 label.create.group.description = Group description
