--- a/src/main/resources/label_ru.properties
+++ b/src/main/resources/label_ru.properties
@@ -3,7 +3,7 @@ language = ru
 label.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 label.login = \u0412\u043E\u0439\u0442\u0438 \u043D\u0430 \u0441\u0430\u0439\u0442
 label.teacher = \u0423\u0447\u0438\u0442\u0435\u043B\u044C
-label.course = \u041A\u0443\u0440\u0441\u044B
+label.course = course
 label.group = \u041C\u0435\u043D\u044E \u0433\u0440\u0443\u043F\u043F
 label.hello = \u041F\u0440\u0438\u0432\u0435\u0442\u0441\u0442\u0432\u0443\u044E
 label.403 = \u0412\u044B \u043D\u0435 \u0438\u043C\u0435\u0435\u0442\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u044D\u0442\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435!
@@ -77,3 +77,4 @@ label.lesson.menu.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0443\u04
 label.lesson.menu.delete.title = \u0423\u0440\u043E\u043A
 
 UserName.User.name = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u043E\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+label.delete=Удалить
