--- a/src/main/resources/label_ua.properties
+++ b/src/main/resources/label_ua.properties
@@ -76,3 +76,4 @@ label.lesson.menu.delete = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u04
 label.lesson.menu.delete.title = Lesson title
 
 UserName.User.name = \u041D\u0435\u0432\u0456\u0440\u043D\u0435 \u0456\u043C'\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+label.delete=Видалити
