refactor edit lesson,course

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -87,7 +87,7 @@ title.size = Size
 title.task.list = Task list
 title.task.menu = Task menu
 title.create.course = Create course
-title.create.new.course = Create new course
+title.create.new.course = Create  course
 title.course.menu = Course menu
 title.add.lesson = Add lesson
 title.lesson = Lesson menu
@@ -113,7 +113,7 @@ title.edit.task = Edit task
 create.course.description = Description
 create.course.title = Title
 create.course.add.user = Add users
-create.course.add.lesson = Add lesson
+create.course.add.lesson = Add lessons
 create.course.add.tasks = Add tasks
 create.course.lesson.description = Lesson description
 create.course.lesson.title = Lesson title
