label properties updated

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -108,6 +108,7 @@ title.find.lesson = Find lesson`
 title.find.group = Find group
 title.edit.course = Edit course
 title.edit.task = Edit task
+title.service = Service
 
 #Create course
 create.course.description = Description
@@ -150,7 +151,10 @@ user.menu.create = Add admin
 user.menu = User menu
 user.menu.delete.email = User email
 
-
+#Service menu
+service.menu = Service
+service.createDump = Create dump from database
+service.restoreDB = Restore database from dump
 
 
 
