change label in jsp

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -9,14 +9,11 @@ login = Log In
 add = Add
 create = Create
 teacher = Teacher
-course = Course menu
-group = Group menu
 send = Send
 delete = Delete
 check = Check
 get.task = Get task
 size.message = Amount of tasks
-lesson = Lesson menu
 user = User
 edit = Edit
 admin.name = Admin name
@@ -33,11 +30,6 @@ error.register.password = password error
 error.userName = Invalid user name
 
 
-
-lesson.menu.find= Find lesson
-
-
-
 registration.successful = Registration successful!
 
 #Create task
@@ -48,30 +40,23 @@ create.task.datapoint = Set test data point
 create.task.name = Task name
 create.task.group = Task group
 
-#User menu
-user.name = Name
-user.email = Email
-user.password = Password
-
-
-#Task menu
+#Menu
+user.menu = User menu
+group.menu = Group menu
+course.menu = Course menu
+lesson.menu = Lesson menu
 task.menu = Task menu
-task.menu.find = Find task
-task.menu.size = Size
-task.menu.delete = Delete task
-task.menu.add = Create task
-task.menu.show.tasks = Show tasks
-task.menu.delete.id = Task name
-task.menu.edit.task = Edit task
+
+menu.find = Find
+menu.size = Size
+menu.delete = Delete
+menu.add = Create
+menu.show = Show
+#menu.delete = Task name
+menu.edit = Edit
 
 #Course menu
-course.menu = Course menu
-course.menu.create = Create course
-course.menu.show = Show courses
-course.menu.delete = Delete course
-course.menu.find = Find course
-course.menu.edit.course = Edit course
-course.add.tasks = Add tasks
+
 
 #Title
 title.edit.group = Edit group
@@ -123,20 +108,17 @@ create.course.lesson.title = Lesson title
 create.course.add.course = Add course
 
 #Lesson menu
-lesson.menu.create = Create lesson
-lesson.menu.show =  Show lessons
-lesson.menu.delete = Delete lesson
 lesson.menu.title = Lesson title
-lesson.menu.add.task = Edit lesson
 lesson.menu.delete.id = Delete id
 
+#User menu
+user.name = Name
+user.email = Email
+user.password = Password
+
 #Group menu
-group.menu.create = Create group
 group.menu.add.group = Add group
-group.menu.show = Show groups
-group.menu.delete = Delete group
 group.menu.add.users = Add users
-group.menu.add.user = Edit group
 group.menu.delete.name = Group name
 group.menu.find = Find group
 
@@ -145,12 +127,8 @@ create.group.title = Group title
 create.group.description = Group description
 create.group.add.group = Add group
 
-
 #User menu
-user.menu.delete = Delete user
-user.menu.show.users = Show users
 user.menu.create = Add admin
-user.menu = User menu
 user.menu.delete.email = User email
 
 #Service menu
