change internatiolization property

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -1,44 +1,27 @@
 language = en
 
 hello = Hello
+title = Title
 account = Account
-passed.tasks=Passed tasks\:
+passed.tasks=Passed tasks
 update = Update
 registration = Registration
 login = Log In
 add = Add
 create = Create
-teacher = Teacher
-send = Send
-delete = Delete
-check = Check
 get.task = Get task
 size.message = Amount of tasks
 user = User
-edit = Edit
 admin.name = Admin name
-find = Find
 check.task = Check task
-
+registration.successful = Registration successful
+solution = Solution
 
 #Error
-error.403 = You do not have permission to access this page!
-error.username = Error name!
+error.403 = You do not have permission to access this page
 error.register.name = name error
 error.register.email = email error
 error.register.password = password error
-error.userName = Invalid user name
-
-
-registration.successful = Registration successful!
-
-#Create task
-create.task.description = Description
-create.task.examples = Example
-create.task.template = Method template
-create.task.datapoint = Set test data point
-create.task.name = Task name
-create.task.group = Task group
 
 #Menu
 user.menu = User menu
@@ -46,17 +29,44 @@ group.menu = Group menu
 course.menu = Course menu
 lesson.menu = Lesson menu
 task.menu = Task menu
-
 menu.find = Find
 menu.size = Size
 menu.delete = Delete
 menu.add = Create
-menu.show = Show
-#menu.delete = Task name
 menu.edit = Edit
 
-#Course menu
+#User menu
+user.name = Name
+user.email = Email
+user.password = Password
+user.menu.show = Users
+user.menu.create = Add admin
+user.menu.delete.email = User email
 
+#Service menu
+service.menu = Service
+service.createDump = Create dump from database
+service.restoreDB = Restore database from dump
+course=Course
+course.add.tasks=
+course.menu.delete=
+
+#Task menu
+task.menu.show = Tasks
+
+#Course menu
+course.menu.show = Courses
+
+#Lesson menu
+lesson.menu.delete.id = Delete id
+lesson.menu.show= Lessons
+
+#Group menu
+group.menu.add.group = Add group
+group.menu.add.users = Add users
+group.menu.delete.name = Group name
+group.menu.find = Find group
+group.menu.show = Groups
 
 #Title
 title.edit.group = Edit group
@@ -91,7 +101,7 @@ title.user.menu = User menu
 title.delete.user = Delete user
 title.add.admin = Add admin
 title.edit.lesson = Edit lesson
-title.find.lesson = Find lesson`
+title.find.lesson = Find lesson
 title.find.group = Find group
 title.edit.course = Edit course
 title.edit.task = Edit task
@@ -107,34 +117,17 @@ create.course.lesson.description = Lesson description
 create.course.lesson.title = Lesson title
 create.course.add.course = Add course
 
-#Lesson menu
-lesson.menu.title = Lesson title
-lesson.menu.delete.id = Delete id
-
-#User menu
-user.name = Name
-user.email = Email
-user.password = Password
-
-#Group menu
-group.menu.add.group = Add group
-group.menu.add.users = Add users
-group.menu.delete.name = Group name
-group.menu.find = Find group
+#Create task
+create.task.description = Description
+create.task.examples = Example
+create.task.template = Method template
+create.task.datapoint = Set test data point
+create.task.name = Task name
+create.task.group = Task group
 
 #Create group
-create.group.title = Group title
 create.group.description = Group description
 create.group.add.group = Add group
-
-#User menu
-user.menu.create = Add admin
-user.menu.delete.email = User email
-
-#Service menu
-service.menu = Service
-service.createDump = Create dump from database
-service.restoreDB = Restore database from dump
 
 
 
