--- a/src/main/resources/label_ua.properties
+++ b/src/main/resources/label_ua.properties
@@ -1,90 +1,6 @@
 language = ua
 
-registration = \u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438\u0441\u044F
-login = \u0412\u0445i\u0434
-teacher = \u0412\u0447\u0438\u0442\u0435\u043B\u044C
-course = \u041A\u0443\u0440\u0441\u0438
-group = \u041C\u0435\u043D\u044E \u0433\u0440\u0443\u043F\u043F
-hello = \u0412i\u0442\u0430\u044E
-send = \u0412i\u0434\u043F\u0440\u0430\u0432\u0438\u0442\u0438
-check = \u041F\u0435\u0440\u0435\u0432i\u0440\u0438\u0442\u0438
-get.task = \u041E\u0442\u0440\u0438\u043C\u0430\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
-size.message = \u041Ai\u043B\u044C\u043Aic\u0442\u044C \u0437\u0430\u0434\u0430\u0447
-lesson = \u041C\u0435\u043D\u044E \u0443\u0440\u043E\u043Ai\u0432
-user = \u041C\u0435\u043D\u044E \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
-
-registration.successful = \u0423\u0441\u043F\u0456\u0448\u043D\u0430 \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F!
-
-#Error
-error.403 = \u0412\u0438 \u043D\u0435 \u043C\u0430\u0454\u0442\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u0443 \u0434\u043E \u0446\u0456\u0454\u0457 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0438!
-
-
-
-create.task.description = \u041E\u043F\u0438\u0441
-create.task.examples = \u041F\u0440\u0438\u043A\u043B\u0430\u0434
-create.task.template = \u0428\u0430\u0431\u043B\u043E\u043D \u043C\u0435\u0442\u043E\u0434\u0443
-create.task.datapoint = \u0422\u0435\u0441\u0442\u043E\u0432\u0456 \u0434\u0430\u043D\u043D\u0456
-
-user.name = I\u043C'\u044F
-user.email = \u041F\u043E\u0448\u0442\u0430
-user.password = \u041F\u0430\u0440\u043E\u043B\u044C
-check.task = \u041F\u0435\u0440\u0435\u0432i\u0440\u043A\u0430 \u0437\u0430\u0434\u0430\u0447i
-
-task.menu = \u0417\u0430\u0434\u0430\u0447i
-task.menu.find = \u0417\u043D\u0430\u0439\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
-task.menu.size = \u041Ai\u043B\u044C\u043Aic\u0442\u044C \u0437\u0430\u0434\u0430\u0447
-task.menu.delete = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
-task.menu.add = \u0414\u043E\u0434\u0430\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
-task.menu.tasks = \u0417\u0430\u0434\u0430\u0447i
-task.menu.delete.id = Id \u0437\u0430\u0434\u0430\u0447\u0456
-
-course.menu = \u041C\u0435\u043D\u044E \u043A\u0443\u0440\u0441i\u0432
-course.menu.create = \u0421\u0442\u0432\u043E\u0440\u0438\u0442\u0438 \u043A\u0443\u0440\u0441
-course.menu.show = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u043A\u0443\u0440\u0441\u0438
-course.menu.delete = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043A\u0443\u0440\u0441
-
-create.task.name = I\u043C'\u044F \u0437\u0430\u0434\u0430\u0447i
-create.task.group = \u0413\u0440\u0443\u043F\u0430 \u0437\u0430\u0434\u0430\u0447i
-
-title.create.new.task = \u0421\u0442\u0432\u043E\u0440\u0438\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
-title.403 = HTTP Status 403 - \u0414\u043E\u0441\u0442\u0443\u043F \u0437\u0430\u0431\u043E\u0440\u043E\u043D\u0435\u043D\u043E!
-title.create.task = \u0421\u0442\u0432\u043E\u0440\u0435\u043D\u043D\u044F \u0437\u0430\u0434\u0430\u0447i
-title.delete.form = Title
-title.do.task = \u0412\u0438\u043A\u043E\u043D\u0430\u043D\u043D\u044F \u0437\u0430\u0434\u0430\u0447i
-title.find.task = \u0417\u043D\u0430\u0439\u0442\u0438 \u0437\u0430\u0434\u0430\u0447\u0443
-title.group.list = \u0421\u043F\u0438\u0441\u043E\u043A \u0433\u0440\u0443\u043F
-title.login = \u041B\u043E\u0433\u0456\u043D
-title.menu = M\u0435\u043D\u044E
-title.registration.form = \u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446i\u044F
-title.size = \u041Ai\u043B\u044C\u043Aic\u0442\u044C \u0437\u0430\u0434\u0430\u0447
-title.task.list = \u0421\u043F\u0438\u0441\u043E\u043A \u0437\u0430\u0434\u0430\u0447
-title.tasks.menu = Title
-title.create.course = Create course
-title.service = \u041E\u0431\u0441\u043B\u0443\u0433\u043E\u0432\u0443\u0432\u0430\u043D\u043D\u044F
-
-register.name.error = \u041F\u043E\u043C\u0438\u043B\u043A\u0430 i\u043C'\u044F
-register.email.error = \u041F\u043E\u043C\u0438\u043B\u043A\u0430 \u043F\u043E\u0448\u0442\u0438
-register.password.error = \u041F\u043E\u043C\u0438\u043B\u043A\u0430\u0430 \u043F\u0430\u0440\u043E\u043B\u044E
-
-create.course.description = \u041E\u043F\u0438\u0441
-create.course.title = Title
-create.course.add.lesson = \u0414\u043E\u0434\u0430\u0442\u0438 \u0443\u0440\u043E\u043A
-course.add.tasks = \u0414\u043E\u0434\u0430\u0442\u0438 \u0437\u0430\u0434\u0430\u0447i
-create.course.lesson.description = \u041E\u043F\u0438\u0441 \u0443\u0440\u043E\u043A\u0443
-create.course.lesson.title = Lesson title
-create.course.add.course = \u0414\u043E\u0434\u0430\u0442\u0438 \u043A\u0443\u0440\u0441
-
-lesson.menu.create = C\u0442\u0432\u043E\u0440\u0438\u0442\u0438 \u0443\u0440\u043E\u043A
-lesson.menu.show =  \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u0443\u0440\u043E\u043A\u0438
-lesson.menu.delete = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u0443\u0440\u043E\u043A
-lesson.menu.delete.title = Lesson title
-
-UserName.User.name = \u041D\u0435\u0432\u0456\u0440\u043D\u0435 \u0456\u043C'\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
-delete=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
-
-#Service menu
-service.menu = \u041E\u0431\u0441\u043B\u0443\u0433\u043E\u0432\u0443\u0432\u0430\u043D\u043D\u044F
-service.createDump = \u0421\u0442\u0432\u043E\u0440\u0438\u0442\u0438 \u0434\u0430\u043C\u043F \u0437 \u0431\u0430\u0437\u0438 \u0434\u0430\u043D\u0438\u0445
-service.restoreDB = \u0412\u0456\u0434\u043D\u043E\u0432\u0438\u0442\u0438 \u0431\u0430\u0437\u0443 \u0434\u0430\u043D\u0438\u0445 \u0437 \u0434\u0430\u043C\u043F\u0430
 account=\u0410\u043A\u043A\u0430\u0443\u043D\u0442
-passed.tasks=\u0412\u0438\u0440i\u0448\u0435\u043Di \u0437\u0430\u0434\u0430\u0447i\:
+add=\u0414\u043E\u0434\u0430\u0442\u0438
+admin.name=I\u043C\u044F \u0430\u0434\u043Ci\u043Dic\u0442\u0440\u0430\u0442\u043E\u0440\u0430
+update=\u041E\u043D\u043E\u0432\u0438\u0442\u0438
