--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -24,6 +24,7 @@ error.register.email = email error
 error.register.password = password error
 
 #Menu
+main.menu = Menu
 user.menu = User menu
 group.menu = Group menu
 course.menu = Course menu
@@ -130,13 +131,13 @@ create.group.description = Group description
 create.group.add.group = Add group
 
 #Validation message
-name.error =  Must start with letter,then allowed[a-zA-Z0-9_-].Length 3 - 30.
-description.error = Allowed 0 - 5 white spaces,then must be at least one letter.Length 10 - 1000.
-email.error = Must start with any letter and contain @,example test@gmail.com
+name.error =  Must start with letter,then allowed[a-zA-Z0-9_-]. Length 3 - 30.
+description.error = Allowed 0 - 5 white spaces,then must be at least one letter. Length 10 - 1000.
+email.error = Must start with any letter and contain @, example test@gmail.com
 password.error = Minimum length 6.
-template.error = Example: public void sum(int a,int b){}
+template.error = Example: public int sum(int a, int b){}
 title.error = Must start with letter, then allowed[a-zA-Z0-9_-]. Length 3 - 30.
-user.type.error = Choose user type
+user.type.error = Choose user type.
 
 
 
