--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -139,5 +139,8 @@ template.error = Example: public int sum(int a, int b){}
 title.error = Must start with letter, then allowed[a-zA-Z0-9_-]. Length 3 - 30.
 user.type.error = Choose user type.
 
+#Max test message with arg
+lesson.not.found = There is no lesson with title: {0}
+
 
 
