--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -141,6 +141,7 @@ user.type.error = Choose user type.
 
 #Max test message with arg
 lesson.not.found = There is no lesson with title: {0}
+course.successfully.create=The course has been successfully created!!!!!!!
 
 
 
