delete remember me

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -132,7 +132,7 @@ create.group.add.group = Add group
 
 #Validation message
 name.error =  Must start with letter,then allowed[a-zA-Z0-9_-]. Length 3 - 30.
-description.error = Allowed 0 - 5 white spaces,then must be at least one letter. Length 10 - 1000.
+description.error = Length 10 - 1000.
 email.error = Must start with any letter and contain @, example test@gmail.com
 password.error = Minimum length 6.
 template.error = Example: public int sum(int a, int b){}
