add subscribe button

--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -35,6 +35,8 @@ menu.size = Size
 menu.delete = Delete
 menu.add = Create
 menu.edit = Edit
+menu.subscribe = Subscribe
+menu.unsubscribe = Unsubscribe
 
 #User menu
 user.name = Name
